# uplc-arithmetization

./: LICENSE  README.md  cabal.project  hie.yaml  uplc-arithmetization.cabal
app/: Main.hs
src/: CEK.hs  CEKPolyData.hs  Eval.hs  IO.hs
src/Types/: Constant.hs  Phase.hs  PolyData.hs  Stack.hs  State.hs  Term.hs  Value.hs
test/: constants.json  run.sh  terms.json  witness.json
uplc-translator/: .gitignore  Makefile  README.md  ast.cc  ast.h  eval.cc  eval.h  lexer.h  lexer.l  main.cc  parser.y  program.in
uplc-translator/test/: README.md  fib.uplc
