cabal-version:      3.0

name:               uplc-arithmetization
version:            0.1.0.0

author:             zkFold team

library
    default-language: Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
    exposed-modules:
      CEK
      CEKPolyData
      Eval
      IO
      Types.Constant
      Types.Phase
      Types.PolyData
      Types.Stack
      Types.State
      Types.Term
      Types.Value
    build-depends:
      base                          >= 4.9 && < 5,
      base16-bytestring                      -any,
      base64                                 -any,
      aeson                                  -any,
      bytestring                             -any,
      containers                             -any,
      data-default                           -any,
      deepseq                                -any,
      directory                              -any,
      extra                                  -any,
      freer-simple                           -any,
      flat                                   -any,
      generic-arbitrary                      -any,
      ghc-prim                               -any,
      hex-text                               -any,
      lens                                   -any,
      memory                                 -any,
      MonadRandom                            -any,
      mtl                                    -any,
      openapi3                               -any,
      optparse-applicative                   -any,
      prettyprinter                          -any,
      pretty-simple                          -any,
      QuickCheck                             -any,
      random                                 -any,
      text                                   -any,
      plutus-tx-js                           -any
    hs-source-dirs: src

executable uplc-arithmetization
    default-language: Haskell2010
    hs-source-dirs: app
    main-is: Main.hs
    build-depends: 
      base                          >= 4.9 && < 5,
      uplc-arithmetization                       ,
